--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <!-- Nosso CSS -->
     <link rel="stylesheet" href="/assets/css/global.css">
-    <link rel="stylesheet" href="/assets/css/pokedex.css">
+    <link rel="stylesheet" href="assets/css/pokedex.css">
 </head>
 
 <body>
